--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/19920513/www/blob/master/README.md?lshwfz#1" target="_blank">首页</a> | <a href="https://d3l8osd9w9ntl9.cloudfront.net/1?fogzkckfa" target="_blank">动态网</a> | <a href="https://dn3dhcszbgs9s.cloudfront.net/2?vhkpo" target="_blank">大纪元</a> | <a href="https://d2zw89wk00y815.cloudfront.net/4?gtxlgsky" target="_blank">看中国</a> | <a href="https://d1f01xri6nyv0g.cloudfront.net/pHh5q?cheki" target="_blank">新生网</a> | <a href="https://d1dy14m1lbgtrj.cloudfront.net/tktpt?islhuwfw" target="_blank">阿波罗网</a> | <a href="https://dmepc9x6zy689.cloudfront.net/Mjpvu?nhwtvjqou" target="_blank">干净世界</a> | <a href="https://d19vw3711v9lks.cloudfront.net/10?qvtjoggd" target="_blank">退党服务</a> | <a href="https://d2a8dyhoj0w562.cloudfront.net/Rffqf?upvoaz" target="_blank">明慧广播</a> | <a href="https://d2r9hn1obbkp2q.cloudfront.net/nw9Vn?eunvy" target="_blank">传奇时代</a> | <a href="https://dol9bue5bysdj.cloudfront.net/AF9AG?ffxzznhjw" target="_blank">新境界影视</a> | <a href="https://d26c5rnrr5nvsd.cloudfront.net/zqMQA?dhtrm" target="_blank">文昭谈论</a> | <a href="https://d200ccn4ewjn2r.cloudfront.net/7?gvrwrkcfy" target="_blank">明慧</a></p><p><a href="https://d3ohms0ydcz20j.cloudfront.net/9?cfnvxdai" target="_blank">大法</a> | <a href="https://d2axefeaz3j87r.cloudfront.net/3?tezccyo" target="_blank">新唐人</a> | <a href="https://d3t1om6knkjnq4.cloudfront.net/obAhT?uemhp" target="_blank">人民报</a> | <a href="https://db1uzmukbk5lb.cloudfront.net/xXNHu?niposj" target="_blank">放光明</a> | <a href="https://d3uam2jhpjrvu5.cloudfront.net/5?yqlian" target="_blank">新纪元</a> | <a href="https://d169wr9ny4m3ww.cloudfront.net/6?uxhgd" target="_blank">希望之声</a> | <a href="https://doyvntponycdh.cloudfront.net/11?nbduix" target="_blank">无界网络</a> | <a href="https://d3v04vdnqz6gui.cloudfront.net/Pueji?zazdiu" target="_blank">追查国际</a> | <a href="https://d35iuueyr80mg8.cloudfront.net/16?rrgugtnv" target="_blank">明慧之窗</a> | <a href="https://d1d4q9enzm2lz3.cloudfront.net/LdvzZ?hpzpmaz" target="_blank">细语人生</a> | <a href="https://d3v04vdnqz6gui.cloudfront.net/fBn3r?uypekevbf" target="_blank">新世纪影视</a> | <a href="https://d3twnfu6dd6xpm.cloudfront.net/PUWMb?pwggwizli" target="_blank">江峰时刻</a> | <a href="https://doyvntponycdh.cloudfront.net/8?gtyurcobi" target="_blank">正见</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/19920513/www/blob/master/README.md?thhebpa#1" target="_blank">首页</a> | <a href="https://dp5vkf7bbqo9d.cloudfront.net/1?dzwzkihyr" target="_blank">动态网</a> | <a href="https://d1ff3ajoaf61nd.cloudfront.net/2?aqsfq" target="_blank">大纪元</a> | <a href="https://d10efcw5kfoez9.cloudfront.net/4?ixbojk" target="_blank">看中国</a> | <a href="https://d7b58bkqqk9ju.cloudfront.net/pHh5q?xxvdfvc" target="_blank">新生网</a> | <a href="https://d1ed4zj8eeit74.cloudfront.net/tktpt?kjajohscw" target="_blank">阿波罗网</a> | <a href="https://ddpul9mprf1bn.cloudfront.net/Mjpvu?irogc" target="_blank">干净世界</a> | <a href="https://d8jw662akk94j.cloudfront.net/10?btupztbe" target="_blank">退党服务</a> | <a href="https://d2wf95os3tobj4.cloudfront.net/Rffqf?brtxvjs" target="_blank">明慧广播</a> | <a href="https://d2iiqnrx4rrboe.cloudfront.net/nw9Vn?jjhnesyo" target="_blank">传奇时代</a> | <a href="https://dmt6yqw0je6jw.cloudfront.net/AF9AG?iwafr" target="_blank">新境界影视</a> | <a href="https://dp5vkf7bbqo9d.cloudfront.net/zqMQA?bbdwin" target="_blank">文昭谈论</a> | <a href="https://dsgpxulwvf05x.cloudfront.net/7?ghdrydmzt" target="_blank">明慧</a></p><p><a href="https://d1znr9c9sm73cv.cloudfront.net/9?lcuydb" target="_blank">大法</a> | <a href="https://dkx26vh7i5y84.cloudfront.net/3?bxjoztuv" target="_blank">新唐人</a> | <a href="https://d2s9nucg9xc8yr.cloudfront.net/obAhT?ogyleqswb" target="_blank">人民报</a> | <a href="https://d1x2hvndm8f89d.cloudfront.net/xXNHu?hqzpmkndm" target="_blank">放光明</a> | <a href="https://d265ujbtchne9r.cloudfront.net/5?oeclr" target="_blank">新纪元</a> | <a href="https://dfu0th2rj4x8t.cloudfront.net/6?qjskzpgfj" target="_blank">希望之声</a> | <a href="https://d2tkl2xkgbxyfv.cloudfront.net/11?nyvdxyku" target="_blank">无界网络</a> | <a href="https://d3b82atanl11dg.cloudfront.net/Pueji?byjchjr" target="_blank">追查国际</a> | <a href="https://d1uqjs1ubkxo6.cloudfront.net/16?elvtfx" target="_blank">明慧之窗</a> | <a href="https://d1ucfc2ix2o07u.cloudfront.net/LdvzZ?xsnqqbgg" target="_blank">细语人生</a> | <a href="https://dvucua6a0b85v.cloudfront.net/fBn3r?vdxstxvy" target="_blank">新世纪影视</a> | <a href="https://d1qf0g0z67vzsk.cloudfront.net/PUWMb?vggjyj" target="_blank">江峰时刻</a> | <a href="https://dfxrfb9070id6.cloudfront.net/8?rbgnl" target="_blank">正见</a></p></td></tr>
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137525.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2021/10/id13318039-GettyImages-802646042-320x200.jpg"><p align="center">美驻华大使：对美中关系未来并不乐观</p></a>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137525.md#1" title="美驻华大使：对美中关系未来并不乐观""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/10/id13318039-GettyImages-802646042-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137490.md#1" title="【菁英论坛】侠女既逝 自由已死 香港陨落""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/12/id14137494-06d585eddac3dc50da7b666b-320x200.jpg">&nbsp;</a>
@@ -13,12 +13,12 @@
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14136973.md#1" title="欧盟否决援助乌克兰500亿欧元计划""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/12/id14136991-GettyImages-1845878668-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14136837.md#1" title="世界银行预计2024年中国经济将大幅放缓""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/09/id14078317-3a9bbdd6bd1d7aa7f99c3c31b975b1ea@1200x1200-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://19920513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>20分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137528.md#1">美德州海滩冒出大量“迷你火山” 原因曝光</a><br>
-:clock8: <em>27分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137515.md#1">消息：中共政府和国企加速实施iPhone禁令</a><br>
-:clock8: <em>34分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137518.md#1">青年失业率“消失” 中国街头露宿者被驱赶</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137525.md#1">美驻华大使：对美中关系未来并不乐观</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137526.md#1">自由国家与极权国家军人的不同待遇</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137471.md#1">【秦鹏观察】中南海祭出3大招 耶伦批北京胡来</a><br>
+:clock8: <em>3分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137528.md#1">美德州海滩冒出大量“迷你火山” 原因曝光</a><br>
+:clock8: <em>10分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137515.md#1">消息：中共政府和国企加速实施iPhone禁令</a><br>
+:clock8: <em>17分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137518.md#1">青年失业率“消失” 中国街头露宿者被驱赶</a><br>
+:clock8: <em>55分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137525.md#1">美驻华大使：对美中关系未来并不乐观</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137526.md#1">自由国家与极权国家军人的不同待遇</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137471.md#1">【秦鹏观察】中南海祭出3大招 耶伦批北京胡来</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136615.md#1">中共央视新闻播出辱习画面 后紧急删除</a><br>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14136734.md#1">中共党魁访越遭冷遇？ 央视不敢报</a><br>
@@ -27,7 +27,6 @@
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135778.md#1">中共又有反常之举 中央经济工作会议缺席者众</a><br>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136668.md#1">多国表态支持菲律宾 中共连连跳脚无人理</a><br>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136191.md#1">双子座流星雨14日晚间登场 每小时约150颗</a><br>
-<a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14136839.md#1">中共公安部特勤局官员猝死 终年57岁</a><br>
 <br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122681.md#1">【特稿】进化假说使科学误入歧途（下）</a><br>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/11/18/n14119395.md#1">【图解】2024年台湾总统候选人政策比较</a><br>
@@ -97,13 +96,13 @@
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135026.md#1">【菁英论坛】中共输出革命 东南亚华人大劫难</a><br>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14134746.md#1">媒体高管披露中共体制内官员负面情绪</a><br>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14134945.md#1">美国大选 川普民调高企 有四大领先优势</a><br>
-<br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d2qg4j4mi2lnri.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d2qg4j4mi2lnri.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d2qg4j4mi2lnri.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d2qg4j4mi2lnri.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d2qg4j4mi2lnri.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d2qg4j4mi2lnri.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d2qg4j4mi2lnri.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d2qg4j4mi2lnri.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d2qg4j4mi2lnri.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d2qg4j4mi2lnri.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d2qg4j4mi2lnri.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d2qg4j4mi2lnri.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d2qg4j4mi2lnri.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d2qg4j4mi2lnri.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d2qg4j4mi2lnri.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d2qg4j4mi2lnri.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d2qg4j4mi2lnri.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d2qg4j4mi2lnri.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d2qg4j4mi2lnri.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d2qg4j4mi2lnri.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d2qg4j4mi2lnri.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d2qg4j4mi2lnri.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d2qg4j4mi2lnri.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d2qg4j4mi2lnri.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d2qg4j4mi2lnri.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://114.45.223.78/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 44,771</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d1c5006opla0es.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d1c5006opla0es.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d1c5006opla0es.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d1c5006opla0es.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d1c5006opla0es.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d1c5006opla0es.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d1c5006opla0es.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d1c5006opla0es.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d1c5006opla0es.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d1c5006opla0es.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d1c5006opla0es.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d1c5006opla0es.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d1c5006opla0es.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d1c5006opla0es.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d1c5006opla0es.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d1c5006opla0es.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d1c5006opla0es.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d1c5006opla0es.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d1c5006opla0es.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d1c5006opla0es.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d1c5006opla0es.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d1c5006opla0es.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d1c5006opla0es.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d1c5006opla0es.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d1c5006opla0es.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://1.34.241.65/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 44,771</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 423,481,137 人
+!共 423,480,485 人
 ```
 </strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137034.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2023/08/id14056737-000_33AK2BP-320x200.jpg"></a><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137034.md#1">继家人被威胁后 蔡慎坤员工也遭警察盘问</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136295.md#1">CECC主席写明信片 关注遭中共重判的牛腾宇</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135393.md#1">【晚间新闻】援乌经费告急 泽连斯基紧急访美</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135394.md#1">【全球新闻】上海医院疫情大爆发 护工披露内情</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14134768.md#1">分析：中共借一带一路扩展活摘器官链条</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14134667.md#1">牛腾宇母亲广州维权 警察拦车抢劫冤案材料</a><br><br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137518.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2023/04/id13966487-000_338423Y1-320x200.jpg"></a><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137518.md#1">青年失业率“消失” 中国街头露宿者被驱赶</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137118.md#1">中共不准“唱衰经济”国安上场摀嘴 引关注</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137038.md#1">中共中央经济会议后 大陆A股连跌三天</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14136969.md#1">中国11月新房价持续疲软 59城市下跌</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14136751.md#1">【新唐人快报】急需现金抵债 碧桂园和万达分手</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14136757.md#1">中国房地产不振 有装修公司数月接不到业务</a><br><br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137515.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2023/09/id14071321-000_32JH2B81-320x200.jpg"></a><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137515.md#1">消息：中共政府和国企加速实施iPhone禁令</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137401.md#1">曝光六盘水法院违法遭迫害 北京律师发求救信</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137352.md#1">再有央企高管落马 深科技董事长周剑被查</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137197.md#1">台港青年组团宣讲：勿信中共谎言和任何承诺</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137017.md#1">被指对陆设贸易壁垒 台陆委会：中共政治操作</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136546.md#1">【中国禁闻】北京房价断崖式下跌 17万套二手房待售</a><br><br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137516.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2023/12/id14137520-f2fb27eb79aaea162b6be71e7c473581-320x200.jpg"></a><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137516.md#1">北京地铁再传惊魂 站台电梯“轰一声陷下去”</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137480.md#1">北京地铁事故肇因引关注 国产信号系统遭质疑</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137311.md#1">寒流袭击中国之际 俄罗斯遇罕见暴风雪</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137143.md#1">中国大范围急速降温 杭州贵阳2天骤降20℃</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137098.md#1">【全球新闻】疫情蔓延香港 重症死亡病例增加</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137097.md#1">【晚间新闻】美众院警告中共：停止跨国镇压</a><br><br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137438.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2016/12/1612012034252275-320x200.jpg"></a><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137438.md#1">自曝女儿个性像霍建华 林心如不愿她进演艺圈</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137323.md#1">安徽三岁半宝宝独自在家冲奶粉喝 引关注</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137353.md#1">亚裔妈妈把孩子关进笼子 在美国佛州被捕</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137078.md#1">“鼠头鸭脖”案责任方被罚款 网民提出质疑</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136604.md#1">举报矿企后获百万迁坟费 湘退休教师获刑10年</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136662.md#1">林心如自曝长相曾被嫌弃 差点无缘饰紫薇格格</a><br><br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14134472.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2010/06/100610123741391-320x200.jpg"></a><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14134472.md#1">新生儿数量减少 湖南安徽等多地幼儿园关闭</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/11/n14134392.md#1">国家地理评2024最佳旅游地 纽约台南上榜</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/6/n14130883.md#1">台湾花莲秘境 美丽的拉索埃涌泉生态园区</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/1/n14128083.md#1">北京等多地罕见现极光 气象局发布地磁暴预警</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/11/28/n14125811.md#1">阿里云一个月内第二次服务中断 网络再度热议</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122933.md#1">郑欣宜为《星愿奇缘》配音 因拍档一句话洒泪</a><br><br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062148.md#1">中国疫情又起 法轮功创始人：针对共产党</a><br>
